# python-microservices

./: README.md
auth/: .env.example  Dockerfile  Makefile  pyproject.toml  requirements.txt
auth/manifests/: auth-deploy.yaml  secret.yaml
auth/src/: config.py  db_client.py  main.py
auth/src/core/: config.py
auth/src/dtos/: auth_dto.py
auth/src/entities/: user.py
auth/src/persistence/: db_client.py
auth/src/services/: jwt.py
gateway/: .env.example  Dockerfile  Makefile  pyproject.toml  requirements.txt
gateway/src/: main.py
gateway/src/core/: config.py
gateway/src/infrastructure/: queue.py
gateway/src/persistence/: db_client.py
gateway/src/services/: auth.py  storage.py
